# SSCred

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
benchmark/: aclProfile.py  benchmark.py
docs/: examples.py
sscred/: __init__.py  acl.py  blind_pedersen.py  blind_signature.py  commitment.py  config.py  examples.py  pack.py  util.py
test/: aclBenchmark.py  aclProfile.py  bench.py  benchmark.py  benchmarkStats.py  test_sscred.py
