[metadata]
name = sscred
version = 0.2.1
license = BSD-3-Clause
author = Kasra EdalatNejad
author_email = kasra.edalat@epfl.ch
description = Single Show Credentials: A Python library for anonymous authentication.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spring-epfl/SSCred
copyright = 2020-2022, Kasra Edalatnejad  (SPRING Lab, EPFL)

classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography
    License :: OSI Approved :: BSD License
